Removed usage of /dev/tty from TerminalLineSettings. Used ProcessBuilder from java 1.7.  Fixes #173